# alpr-datasette

./: .gitignore  README.md  fetch-osm.sh  load-datasette.sh  load-db.sh  pyproject.toml  requirements.txt  run-db.sh  setup.sh
src/deflock_datasette/: __init__.py  osm.py
