[project]
name = "deflock-datasette"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlite-utils>=3.38",
    "requests>=2.32.3",
    "datasette>=0.65.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
